我的腦子塞滿了芨芨草QQ

--- a/OR_MP_P1.ipynb
+++ b/OR_MP_P1.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 259,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,20 +33,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 260,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0, 10800, 13600, 3200, 18000, 10200]\n",
-      "55800\n"
+      "car_current_station:  [1, 2, 1, 4]\n",
+      "[[ 0  6  7  8]\n",
+      " [ 6  0 11  8]\n",
+      " [ 7 11  0  3]\n",
+      " [ 8  8  3  0]]\n",
+      "pickup station:  [0, 4, 4, 4, 1, 4, 3, 1, 2, 3, 2]\n",
+      "return station:  [0, 2, 2, 2, 4, 1, 3, 2, 4, 4, 1]\n",
+      "level_demanded:  [0, 1, 1, 1, 1, 1, 2, 2, 2, 2, 2]\n",
+      "level_supplied:  [1, 2, 2, 2]\n",
+      "Revenue=  [0, 1400, 3000, 6000, 1100, 11600, 7200, 4800, 5400, 3900, 8400]\n",
+      "Sum of revenue=  52800\n"
      ]
     }
    ],
    "source": [
-    "df = pd.read_csv('data\\instance01.txt', header=None)\n",
+    "df = pd.read_csv('data\\instance02.txt', header=None)\n",
     "\n",
     "df_main = df.iloc[:2,:]\n",
     "df_main.columns = df_main.iloc[0]\n",
@@ -68,6 +77,7 @@
     "for m in range(n_C):\n",
     "    initial_station = int(df_car.loc[m, 'Initial station'])\n",
     "    car_current_station.append(initial_station)\n",
+    "print(\"car_current_station: \", car_current_station)\n",
     "\n",
     "df_car_lv = df.iloc[n_C+5:n_C+n_L+6,:]\n",
     "df_car_lv.columns = df_car_lv.iloc[0]\n",
@@ -112,6 +122,9 @@
     "distance = df_distance.pivot(index='From', columns='To', values='Distance')\n",
     "distance = distance.apply(pd.to_numeric, errors='coerce') // 30\n",
     "distance_array = distance.values\n",
+    "print(distance_array)\n",
+    "print(\"pickup station: \", pickup)\n",
+    "print(\"return station: \", finish)\n",
     "\n",
     "lvD = []\n",
     "for k in range(n_K+1):\n",
@@ -126,6 +139,9 @@
     "    level_supplied = int(df_car.loc[m, 'Level'])\n",
     "    lvS.append(level_supplied)\n",
     "\n",
+    "print(\"level_demanded: \", lvD)\n",
+    "print(\"level_supplied: \", lvS)\n",
+    "\n",
     "Cmax = 48*n_D\n",
     "\n",
     "Revenue = []\n",
@@ -135,9 +151,9 @@
     "        continue\n",
     "    time_units = int(df_order.loc[k-1, 'Time units'])\n",
     "    hour_rate = int(df_order.loc[k-1, 'Hour rate'])\n",
-    "    Revenue.append(time_units*hour_rate)\n",
-    "print(Revenue)\n",
-    "print(sum(Revenue))"
+    "    Revenue.append(time_units*(hour_rate//2))\n",
+    "print(\"Revenue= \", Revenue)\n",
+    "print(\"Sum of revenue= \", sum(Revenue))"
    ]
   },
   {
@@ -150,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 261,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -210,19 +226,13 @@
     "# if there is no level-l's car in station i       \n",
     "# uk = 1 if order k is upgraded\n",
     "u = []\n",
-    "for k in range(n_K+1):\n",
-    "    if (k==0):\n",
-    "        u.append(int(0))\n",
-    "        continue    \n",
-    "    u.append(P1.addVar(lb = 0, vtype = GRB.BINARY, name = \"u_\" + str(k)))\n",
+    "for k in range(n_K+1): \n",
+    "    u.append(P1.addVar(lb = 0, vtype = GRB.BINARY, name = \"u_\" + str(k+1)))\n",
     "\n",
     "# vk = 1 if order k is required to move a car from other station\n",
     "v = []\n",
     "for k in range(n_K+1):\n",
-    "    if (k==0):\n",
-    "        v.append(int(0))\n",
-    "        continue    \n",
-    "    v.append(P1.addVar(lb = 0, vtype = GRB.BINARY, name = \"v_\" + str(k)))\n",
+    "    v.append(P1.addVar(lb = 0, vtype = GRB.BINARY, name = \"v_\" + str(k+1)))\n",
     "\n",
     "# # re_ij = rearrangment time to move car from station i to station j\n",
     "# re = []\n",
@@ -237,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 262,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -248,62 +258,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 263,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{0: <gurobi.Constr *Awaiting Model Update*>,\n",
-       " 1: <gurobi.Constr *Awaiting Model Update*>,\n",
-       " 2: <gurobi.Constr *Awaiting Model Update*>}"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "P1.addConstrs((2*z[m][p][q] <= accept[p] + accept[q] for p in range(1, n_K+1) for q in range(1, n_K+1) if (p!=q) for m in range(n_C)))\n",
+    "P1.addConstrs((2*z[m][p][q] <= accept[p] + accept[q] for p in range(n_K+1) for q in range(n_K+1) if (p!=q) for m in range(n_C)))\n",
     "# Each order has a single predecessor (successor) on exactaly one of the car\n",
-    "P1.addConstrs((quicksum(z[m][p][q] for m in range(n_C) for p in range(n_K+1) if (p!=q)) == 1) for q in range(n_K))\n",
-    "P1.addConstrs((quicksum(z[m][p][q] for m in range(n_C) for q in range(n_K+1) if (p!=q)) == 1) for p in range(n_K))\n",
-    "\n",
+    "P1.addConstrs((quicksum(z[m][p][q] for m in range(n_C) for p in range(n_K+1) if (p!=q))) == 1 for q in range(n_K))\n",
+    "P1.addConstrs((quicksum(z[m][p][q] for m in range(n_C) for q in range(n_K+1) if (p!=q))) == 1 for p in range(n_K))\n",
     "# # An order can only have a predecessor on a car if it also has a successor on that same car\n",
     "P1.addConstrs((quicksum(z[m][p][q] for q in range(n_K+1) if (p!=q)) == quicksum(z[m][h][p] for h in range(n_K+1) if (h!=p))) for p in range(n_K) for m in range(n_C))\n",
-    "\n",
     "# The completion times of each order s.t. if order p precedes order q on a car m, \n",
     "# the earliest time that order q can end must be greater than Cp + setup time from order p to order q and the processing time of order q\n",
     "P1.addConstrs((C[q]-C[p] + A*(1-z[m][p][q]) >= s[m][p][q] + x[m][q]) for p in range(n_K+1) for q in range(n_K) if (p!=q) for m in range(n_C))\n",
-    "\n",
     "# Only one order can be schedueled first on each car\n",
-    "P1.addConstrs((quicksum(z[m][0][p] for p in range(n_K)) <= 1) for m in range(n_C))\n",
-    "\n",
-    "# 移車/升等二選一\n",
-    "P1.addConstrs(u[k]+v[k] <= accept[k] for k in range(1, n_K+1)) \n",
-    "# 如果有移車，那s[m][p][q]至少是7個單位(清潔*6 + 提早1單位到達) + 移車所需的時間\n",
-    "P1.addConstrs(s[m][p][q] >= 6+v[q]+distance_array[finish[p]-1][pickup[q]-1] for p in range(1, n_K+1) for q in range(1, n_K+1) if (p!=q) for m in range(n_C)) \n",
-    "# 移車的總時間 <= B\n",
-    "P1.addConstrs(quicksum(accept[k] * v[k] * distance_array[finish[p]-1][pickup[k]-1] for k in range(n_K+1)) <= B  for p in range(n_K+1))\n",
-    "# # 接單的話，至少要提供跟客戶要求的level一樣的車\n",
-    "# P1.addConstrs(accept[k]*lvD[k] <= lvS[m] for k in range(n_K+1) for m in range(n_C))\n",
+    "P1.addConstrs(quicksum(z[m][0][p] for p in range(n_K)) <= 1 for m in range(n_C))\n",
     "\n",
     "# C0=0, an auxiliary order used to enforce the start of the schedule\n",
     "P1.addConstrs(C[0] == 0 for m in range(n_C))\n",
-    "\n",
     "# Calculate the makespan for each individual car\n",
     "P1.addConstrs((quicksum(((s[m][p][q] + x[m][q]) * z[m][p][q]) for q in range(n_K) for p in range(n_K+1) if (p!=q))  == O[m]) for m in range(n_C))\n",
     "# Links the individual car makespan to the overall schedule makespan\n",
     "P1.addConstrs((O[m] <= Cmax for m in range(n_C)))\n",
     "\n",
+    "# 移車/升等二選一\n",
+    "P1.addConstrs(u[k]+v[k] <= accept[k] for k in range(n_K+1)) \n",
+    "# 如果有移車，那s[m][p][q]至少是7個單位(清潔*6 + 有移車要提早1單位到達) + 移車所需的時間\n",
+    "P1.addConstrs(s[m][p][q] >= 6+v[q]+distance_array[finish[p]-1][pickup[q]-1] for p in range(1, n_K+1) for q in range(1, n_K+1) if (p!=q) for m in range(n_C)) \n",
+    "# 移車的總時間 <= B\n",
+    "P1.addConstrs(quicksum(accept[k] * v[k] * distance_array[finish[p]-1][pickup[k]-1] for k in range(1, n_K+1)) <= B  for p in range(1, n_K+1))\n",
+    "\n",
+    "\n",
+    "# 接單的話，至少要提供跟客戶要求的level一樣的車\n",
+    "# P1.addConstrs(accept[k]*lvD[k] <= lvS[m] for k in range(1, n_K+1) for m in range(n_C))\n",
     "# 接單的話，客戶領車的地方要有車\n",
-    "# P1.addConstrs(car_current_station[m] == accept[k]*pickup[k] for k in range(n_K+1) for m in range(n_C))"
+    "# P1.addConstrs(accept[k]*pickup[k] == accept[k]*car_current_station[m] for k in range(1, n_K+1) for m in range(n_C))\n",
+    "\n",
+    "P1.update()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 264,
    "metadata": {},
    "outputs": [
     {
@@ -315,40 +311,49 @@
       "CPU model: Intel(R) Core(TM) i5-1035G1 CPU @ 1.00GHz, instruction set [SSE2|AVX|AVX2|AVX512]\n",
       "Thread count: 4 physical cores, 8 logical processors, using up to 8 threads\n",
       "\n",
-      "Optimize a model with 159 rows, 255 columns and 633 nonzeros\n",
-      "Model fingerprint: 0xfb11bd59\n",
-      "Model has 84 quadratic constraints\n",
-      "Variable types: 0 continuous, 255 integer (123 binary)\n",
+      "Optimize a model with 883 rows, 1055 columns and 3636 nonzeros\n",
+      "Model fingerprint: 0x9667597e\n",
+      "Model has 414 quadratic constraints\n",
+      "Variable types: 0 continuous, 1055 integer (516 binary)\n",
       "Coefficient statistics:\n",
       "  Matrix range     [1e+00, 2e+00]\n",
-      "  QMatrix range    [1e+00, 3e+00]\n",
+      "  QMatrix range    [1e+00, 1e+01]\n",
       "  QLMatrix range   [1e+00, 1e+00]\n",
-      "  Objective range  [1e+04, 5e+04]\n",
+      "  Objective range  [3e+03, 3e+04]\n",
       "  Bounds range     [1e+00, 1e+05]\n",
-      "  RHS range        [1e+00, 1e+02]\n",
-      "  QRHS range       [6e+00, 6e+00]\n",
-      "Presolve removed 95 rows and 63 columns\n",
-      "Presolve time: 0.01s\n",
-      "Presolved: 566 rows, 825 columns, 2046 nonzeros\n",
-      "Presolved model has 420 SOS constraint(s)\n",
-      "Variable types: 0 continuous, 825 integer (309 binary)\n",
-      "Found heuristic solution: objective 55800.000000\n",
+      "  RHS range        [1e+00, 3e+02]\n",
+      "  QRHS range       [6e+01, 6e+01]\n",
+      "Presolve removed 111 rows and 148 columns\n",
+      "Presolve time: 0.02s\n",
+      "Presolved: 3505 rows, 4395 columns, 12130 nonzeros\n",
+      "Presolved model has 2320 SOS constraint(s)\n",
+      "Variable types: 0 continuous, 4395 integer (1624 binary)\n",
+      "Found heuristic solution: objective 52800.000000\n",
       "\n",
-      "Explored 1 nodes (0 simplex iterations) in 0.09 seconds (0.02 work units)\n",
+      "Explored 1 nodes (0 simplex iterations) in 0.40 seconds (0.12 work units)\n",
       "Thread count was 8 (of 8 available processors)\n",
       "\n",
-      "Solution count 1: 55800 \n",
+      "Solution count 1: 52800 \n",
       "\n",
       "Optimal solution found (tolerance 1.00e-04)\n",
-      "Best objective 5.580000000000e+04, best bound 5.580000000000e+04, gap 0.0000%\n",
-      "z* =  55800.0\n"
+      "Best objective 5.280000000000e+04, best bound 5.280000000000e+04, gap 0.0000%\n",
+      "z* =  52800.0\n"
      ]
     }
    ],
    "source": [
+    "\n",
+    "\n",
     "P1.optimize()\n",
     "print(\"z* = \", P1.ObjVal)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
