I need some LingLing power QQ

--- a/OR_MP_P1.ipynb
+++ b/OR_MP_P1.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 259,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,29 +33,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 260,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "car_current_station:  [1, 2, 1, 4]\n",
-      "[[ 0  6  7  8]\n",
-      " [ 6  0 11  8]\n",
-      " [ 7 11  0  3]\n",
-      " [ 8  8  3  0]]\n",
-      "pickup station:  [0, 4, 4, 4, 1, 4, 3, 1, 2, 3, 2]\n",
-      "return station:  [0, 2, 2, 2, 4, 1, 3, 2, 4, 4, 1]\n",
-      "level_demanded:  [0, 1, 1, 1, 1, 1, 2, 2, 2, 2, 2]\n",
-      "level_supplied:  [1, 2, 2, 2]\n",
-      "Revenue=  [0, 1400, 3000, 6000, 1100, 11600, 7200, 4800, 5400, 3900, 8400]\n",
-      "Sum of revenue=  52800\n"
+      "car_current_station:  [1, 2, 3, 5, 4, 6]\n",
+      "[[ 0  6 15 10 11  9]\n",
+      " [ 6  0 11  8 10 12]\n",
+      " [15 11  0  6  7  8]\n",
+      " [10  8  6  0  4  5]\n",
+      " [11 10  7  4  0  3]\n",
+      " [ 9 12  8  5  3  0]]\n",
+      "pickup station:  [0, 1, 4, 5, 1, 6, 3, 2, 6, 3, 4]\n",
+      "return station:  [0, 6, 5, 1, 2, 6, 4, 1, 6, 4, 2]\n",
+      "level_demanded:  [0, 1, 1, 1, 1, 2, 1, 2, 2, 2, 1]\n",
+      "level_supplied:  [1, 1, 1, 2, 2, 2]\n",
+      "Revenue=  [0, 1900, 3200, 5600, 5100, 36800, 1500, 27200, 4000, 27200, 9600]\n",
+      "Sum of revenue=  122100\n"
      ]
     }
    ],
    "source": [
-    "df = pd.read_csv('data\\instance02.txt', header=None)\n",
+    "df = pd.read_csv('data\\instance05.txt', header=None)\n",
     "\n",
     "df_main = df.iloc[:2,:]\n",
     "df_main.columns = df_main.iloc[0]\n",
@@ -166,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 261,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -222,7 +224,6 @@
     "        for q in range(n_K+1):\n",
     "            s[m][p].append(P1.addVar(lb=0, vtype=GRB.INTEGER, name='s_'+str(m+1)+str(p)+str(q)))\n",
     "\n",
-    "\n",
     "# if there is no level-l's car in station i       \n",
     "# uk = 1 if order k is upgraded\n",
     "u = []\n",
@@ -234,20 +235,12 @@
     "for k in range(n_K+1):\n",
     "    v.append(P1.addVar(lb = 0, vtype = GRB.BINARY, name = \"v_\" + str(k+1)))\n",
     "\n",
-    "# # re_ij = rearrangment time to move car from station i to station j\n",
-    "# re = []\n",
-    "# for i in range(n_S):\n",
-    "#     re.append([])\n",
-    "#     for j in range(n_S):\n",
-    "#         re[i].append(P1.addVar(lb=distance.iloc[j, i], vtype=GRB.INTEGER, name=\"re_\" + str(i+1) + str(j+1)))\n",
-    "\n",
-    "\n",
     "A = P1.addVar(lb = 100000, vtype = GRB.INTEGER, name = \"a large number\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 262,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -258,14 +251,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 263,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
     "P1.addConstrs((2*z[m][p][q] <= accept[p] + accept[q] for p in range(n_K+1) for q in range(n_K+1) if (p!=q) for m in range(n_C)))\n",
     "# Each order has a single predecessor (successor) on exactaly one of the car\n",
-    "P1.addConstrs((quicksum(z[m][p][q] for m in range(n_C) for p in range(n_K+1) if (p!=q))) == 1 for q in range(n_K))\n",
-    "P1.addConstrs((quicksum(z[m][p][q] for m in range(n_C) for q in range(n_K+1) if (p!=q))) == 1 for p in range(n_K))\n",
+    "P1.addConstrs((quicksum(quicksum(z[m][p][q] for m in range(n_C)) for p in range(n_K+1) if (p!=q))) == 1 for q in range(n_K))\n",
+    "P1.addConstrs((quicksum(quicksum(z[m][p][q] for m in range(n_C)) for q in range(n_K+1) if (p!=q))) == 1 for p in range(n_K))\n",
     "# # An order can only have a predecessor on a car if it also has a successor on that same car\n",
     "P1.addConstrs((quicksum(z[m][p][q] for q in range(n_K+1) if (p!=q)) == quicksum(z[m][h][p] for h in range(n_K+1) if (h!=p))) for p in range(n_K) for m in range(n_C))\n",
     "# The completion times of each order s.t. if order p precedes order q on a car m, \n",
@@ -277,7 +270,7 @@
     "# C0=0, an auxiliary order used to enforce the start of the schedule\n",
     "P1.addConstrs(C[0] == 0 for m in range(n_C))\n",
     "# Calculate the makespan for each individual car\n",
-    "P1.addConstrs((quicksum(((s[m][p][q] + x[m][q]) * z[m][p][q]) for q in range(n_K) for p in range(n_K+1) if (p!=q))  == O[m]) for m in range(n_C))\n",
+    "P1.addConstrs(quicksum(quicksum(((s[m][p][q] + x[m][q]) * z[m][p][q]) for q in range(n_K)) for p in range(n_K+1) if (p!=q))  == O[m] for m in range(n_C))\n",
     "# Links the individual car makespan to the overall schedule makespan\n",
     "P1.addConstrs((O[m] <= Cmax for m in range(n_C)))\n",
     "\n",
@@ -299,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 264,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -311,39 +304,37 @@
       "CPU model: Intel(R) Core(TM) i5-1035G1 CPU @ 1.00GHz, instruction set [SSE2|AVX|AVX2|AVX512]\n",
       "Thread count: 4 physical cores, 8 logical processors, using up to 8 threads\n",
       "\n",
-      "Optimize a model with 883 rows, 1055 columns and 3636 nonzeros\n",
-      "Model fingerprint: 0x9667597e\n",
-      "Model has 414 quadratic constraints\n",
-      "Variable types: 0 continuous, 1055 integer (516 binary)\n",
+      "Optimize a model with 1309 rows, 1561 columns and 5438 nonzeros\n",
+      "Model fingerprint: 0xe3ed06e2\n",
+      "Model has 616 quadratic constraints\n",
+      "Variable types: 0 continuous, 1561 integer (758 binary)\n",
       "Coefficient statistics:\n",
       "  Matrix range     [1e+00, 2e+00]\n",
-      "  QMatrix range    [1e+00, 1e+01]\n",
+      "  QMatrix range    [1e+00, 2e+01]\n",
       "  QLMatrix range   [1e+00, 1e+00]\n",
-      "  Objective range  [3e+03, 3e+04]\n",
+      "  Objective range  [5e+03, 1e+05]\n",
       "  Bounds range     [1e+00, 1e+05]\n",
-      "  RHS range        [1e+00, 3e+02]\n",
-      "  QRHS range       [6e+01, 6e+01]\n",
-      "Presolve removed 111 rows and 148 columns\n",
-      "Presolve time: 0.02s\n",
-      "Presolved: 3505 rows, 4395 columns, 12130 nonzeros\n",
-      "Presolved model has 2320 SOS constraint(s)\n",
-      "Variable types: 0 continuous, 4395 integer (1624 binary)\n",
-      "Found heuristic solution: objective 52800.000000\n",
+      "  RHS range        [1e+00, 2e+02]\n",
+      "  QRHS range       [4e+01, 4e+01]\n",
+      "Presolve removed 67 rows and 96 columns\n",
+      "Presolve time: 0.03s\n",
+      "Presolved: 5343 rows, 6695 columns, 18650 nonzeros\n",
+      "Presolved model has 3480 SOS constraint(s)\n",
+      "Variable types: 0 continuous, 6695 integer (2490 binary)\n",
+      "Found heuristic solution: objective 122100.00000\n",
       "\n",
-      "Explored 1 nodes (0 simplex iterations) in 0.40 seconds (0.12 work units)\n",
+      "Explored 1 nodes (0 simplex iterations) in 0.46 seconds (0.22 work units)\n",
       "Thread count was 8 (of 8 available processors)\n",
       "\n",
-      "Solution count 1: 52800 \n",
+      "Solution count 1: 122100 \n",
       "\n",
       "Optimal solution found (tolerance 1.00e-04)\n",
-      "Best objective 5.280000000000e+04, best bound 5.280000000000e+04, gap 0.0000%\n",
-      "z* =  52800.0\n"
+      "Best objective 1.221000000000e+05, best bound 1.221000000000e+05, gap 0.0000%\n",
+      "z* =  122100.0\n"
      ]
     }
    ],
    "source": [
-    "\n",
-    "\n",
     "P1.optimize()\n",
     "print(\"z* = \", P1.ObjVal)"
    ]
