--- a/OR_MP_P1.ipynb
+++ b/OR_MP_P1.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 202,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,31 +33,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 203,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "car_current_station:  [1, 2, 3, 5, 4, 6]\n",
-      "[[ 0  6 15 10 11  9]\n",
-      " [ 6  0 11  8 10 12]\n",
-      " [15 11  0  6  7  8]\n",
-      " [10  8  6  0  4  5]\n",
-      " [11 10  7  4  0  3]\n",
-      " [ 9 12  8  5  3  0]]\n",
-      "pickup station:  [0, 1, 4, 5, 1, 6, 3, 2, 6, 3, 4]\n",
-      "return station:  [0, 6, 5, 1, 2, 6, 4, 1, 6, 4, 2]\n",
-      "level_demanded:  [0, 1, 1, 1, 1, 2, 1, 2, 2, 2, 1]\n",
-      "level_supplied:  [1, 1, 1, 2, 2, 2]\n",
-      "Revenue=  [0, 1900, 3200, 5600, 5100, 36800, 1500, 27200, 4000, 27200, 9600]\n",
-      "Sum of revenue=  122100\n"
+      "car_current_station:  [1, 4, 2, 9, 7, 3, 7, 6, 10, 7]\n",
+      "[[ 0 28 12 12 17 23 17 23 10 18]\n",
+      " [28  0 16 18 11  9 15 21 20 16]\n",
+      " [12 16  0 22 17 21 27 33  4 28]\n",
+      " [12 18 22  0  7 13  7 11 22  8]\n",
+      " [17 11 17  7  0  6 10 16 17 11]\n",
+      " [23  9 21 13  6  0  6 12 21  7]\n",
+      " [17 15 27  7 10  6  0  6 27  1]\n",
+      " [23 21 33 11 16 12  6  0 33  5]\n",
+      " [10 20  4 22 17 21 27 33  0 28]\n",
+      " [18 16 28  8 11  7  1  5 28  0]]\n",
+      "pickup station:  [0, 7, 10, 10, 1, 7, 8, 6, 9, 8, 8, 2, 2, 1, 5, 4, 4, 9, 6, 8, 3]\n",
+      "return station:  [0, 3, 4, 2, 3, 10, 4, 9, 10, 1, 5, 8, 10, 8, 9, 5, 2, 10, 9, 4, 10]\n",
+      "level_demanded:  [0, 1, 1, 1, 1, 1, 1, 2, 2, 2, 2, 2, 2, 2, 3, 3, 3, 3, 3, 3, 3]\n",
+      "level_supplied:  [1, 1, 1, 2, 2, 2, 3, 3, 3, 3]\n",
+      "Revenue=  [0, 2900, 1000, 2500, 2400, 10100, 2900, 7500, 3800, 7000, 7000, 2600, 3000, 5400, 12000, 26000, 16500, 12000, 9000, 7000, 8000]\n",
+      "Sum of revenue=  148600\n"
      ]
     }
    ],
    "source": [
-    "df = pd.read_csv('data\\instance05.txt', header=None)\n",
+    "df = pd.read_csv('data\\instance04.txt', header=None)\n",
     "\n",
     "df_main = df.iloc[:2,:]\n",
     "df_main.columns = df_main.iloc[0]\n",
@@ -168,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 204,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -190,17 +194,6 @@
     "        z[m].append([])\n",
     "        for q in range(n_K+1):\n",
     "            z[m][p].append(P1.addVar(lb = 0, vtype = GRB.BINARY, name = \"z_\" + str(m+1) + str(p) + str(q)))\n",
-    "\n",
-    "# x_mk = time spent when accept order k assigned to car m (rental time)\n",
-    "x = []\n",
-    "for m in range(n_C):\n",
-    "    x.append([])\n",
-    "    for k in range(n_K+1):\n",
-    "        if (k==0):\n",
-    "            x[m].append(int(0))\n",
-    "            continue\n",
-    "        time_units = int(df_order.loc[k-1, 'Time units'])\n",
-    "        x[m].append(P1.addVar(lb = time_units, vtype = GRB.INTEGER, name = \"x_\" + str(m+1) + str(k)))\n",
     "\n",
     "# Ck = completion time of order k\n",
     "C = []\n",
@@ -235,12 +228,30 @@
     "for k in range(n_K+1):\n",
     "    v.append(P1.addVar(lb = 0, vtype = GRB.BINARY, name = \"v_\" + str(k+1)))\n",
     "\n",
+    "# x_mk = time spent when accept order k assigned to car m (rental time)\n",
+    "x = []\n",
+    "for m in range(n_C):\n",
+    "    x.append([])\n",
+    "    for k in range(n_K+1):\n",
+    "        if (k==0):\n",
+    "            x[m].append(int(0))\n",
+    "            continue\n",
+    "        time_units = int(df_order.loc[k-1, 'Time units'])\n",
+    "        x[m].append(P1.addVar(lb = time_units, vtype = GRB.INTEGER, name = \"x_\" + str(m+1) + str(k)))\n",
+    "\n",
+    "# y_mk = 1 if order k assigned to car m\n",
+    "y = []\n",
+    "for m in range(n_C):\n",
+    "    y.append([])\n",
+    "    for k in range(n_K+1):\n",
+    "        y[m].append(P1.addVar(lb = 0, vtype = GRB.BINARY, name = \"y_\" + str(m+1) + str(k)))\n",
+    "\n",
     "A = P1.addVar(lb = 100000, vtype = GRB.INTEGER, name = \"a large number\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 205,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -251,11 +262,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 206,
    "metadata": {},
    "outputs": [],
    "source": [
-    "P1.addConstrs((2*z[m][p][q] <= accept[p] + accept[q] for p in range(n_K+1) for q in range(n_K+1) if (p!=q) for m in range(n_C)))\n",
+    "# P1.addConstrs((2*z[m][p][q] <= accept[p] + accept[q] for p in range(n_K+1) for q in range(n_K+1) if (p!=q) for m in range(n_C)))\n",
     "# Each order has a single predecessor (successor) on exactaly one of the car\n",
     "P1.addConstrs((quicksum(quicksum(z[m][p][q] for m in range(n_C)) for p in range(n_K+1) if (p!=q))) == 1 for q in range(n_K))\n",
     "P1.addConstrs((quicksum(quicksum(z[m][p][q] for m in range(n_C)) for q in range(n_K+1) if (p!=q))) == 1 for p in range(n_K))\n",
@@ -263,7 +274,7 @@
     "P1.addConstrs((quicksum(z[m][p][q] for q in range(n_K+1) if (p!=q)) == quicksum(z[m][h][p] for h in range(n_K+1) if (h!=p))) for p in range(n_K) for m in range(n_C))\n",
     "# The completion times of each order s.t. if order p precedes order q on a car m, \n",
     "# the earliest time that order q can end must be greater than Cp + setup time from order p to order q and the processing time of order q\n",
-    "P1.addConstrs((C[q]-C[p] + A*(1-z[m][p][q]) >= s[m][p][q] + x[m][q]) for p in range(n_K+1) for q in range(n_K) if (p!=q) for m in range(n_C))\n",
+    "P1.addConstrs(C[q]-C[p] + A*(1-z[m][p][q]) >= s[m][p][q] + x[m][q] for p in range(n_K+1) for q in range(n_K) if (p!=q) for m in range(n_C))\n",
     "# Only one order can be schedueled first on each car\n",
     "P1.addConstrs(quicksum(z[m][0][p] for p in range(n_K)) <= 1 for m in range(n_C))\n",
     "\n",
@@ -275,24 +286,25 @@
     "P1.addConstrs((O[m] <= Cmax for m in range(n_C)))\n",
     "\n",
     "# 移車/升等二選一\n",
-    "P1.addConstrs(u[k]+v[k] <= accept[k] for k in range(n_K+1)) \n",
+    "P1.addConstrs(u[k]+v[k] <= y[m][k] for k in range(n_K+1) for m in range(n_C)) \n",
     "# 如果有移車，那s[m][p][q]至少是7個單位(清潔*6 + 有移車要提早1單位到達) + 移車所需的時間\n",
     "P1.addConstrs(s[m][p][q] >= 6+v[q]+distance_array[finish[p]-1][pickup[q]-1] for p in range(1, n_K+1) for q in range(1, n_K+1) if (p!=q) for m in range(n_C)) \n",
     "# 移車的總時間 <= B\n",
     "P1.addConstrs(quicksum(accept[k] * v[k] * distance_array[finish[p]-1][pickup[k]-1] for k in range(1, n_K+1)) <= B  for p in range(1, n_K+1))\n",
     "\n",
-    "\n",
+    "# 一個訂單最多分配給一台車\n",
+    "P1.addConstrs(quicksum(y[m][k] for m in range(n_C)) <= 1 for k in range(1, n_K+1))\n",
     "# 接單的話，至少要提供跟客戶要求的level一樣的車\n",
-    "# P1.addConstrs(accept[k]*lvD[k] <= lvS[m] for k in range(1, n_K+1) for m in range(n_C))\n",
+    "P1.addConstrs(y[m][k]*lvD[k] <= lvS[m] for k in range(1, n_K+1) for m in range(n_C))\n",
     "# 接單的話，客戶領車的地方要有車\n",
-    "# P1.addConstrs(accept[k]*pickup[k] == accept[k]*car_current_station[m] for k in range(1, n_K+1) for m in range(n_C))\n",
-    "\n",
+    "P1.addConstrs(y[m][k]*pickup[k] == y[m][k]*car_current_station[m] for k in range(1, n_K+1) for m in range(n_C))\n",
+    "P1.addConstrs(y[m][p] + y[m][q] <= z[m][p][q] + z[m][q][p] + 1 for m in range(n_C) for p in range(n_K+1) for q in range(n_K+1))\n",
     "P1.update()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 207,
    "metadata": {},
    "outputs": [
     {
@@ -304,33 +316,33 @@
       "CPU model: Intel(R) Core(TM) i5-1035G1 CPU @ 1.00GHz, instruction set [SSE2|AVX|AVX2|AVX512]\n",
       "Thread count: 4 physical cores, 8 logical processors, using up to 8 threads\n",
       "\n",
-      "Optimize a model with 1309 rows, 1561 columns and 5438 nonzeros\n",
-      "Model fingerprint: 0xe3ed06e2\n",
-      "Model has 616 quadratic constraints\n",
-      "Variable types: 0 continuous, 1561 integer (758 binary)\n",
+      "Optimize a model with 9110 rows, 9323 columns and 42241 nonzeros\n",
+      "Model fingerprint: 0xfaf7b353\n",
+      "Model has 4030 quadratic constraints\n",
+      "Variable types: 0 continuous, 9323 integer (4682 binary)\n",
       "Coefficient statistics:\n",
-      "  Matrix range     [1e+00, 2e+00]\n",
-      "  QMatrix range    [1e+00, 2e+01]\n",
+      "  Matrix range     [1e+00, 9e+00]\n",
+      "  QMatrix range    [1e+00, 3e+01]\n",
       "  QLMatrix range   [1e+00, 1e+00]\n",
-      "  Objective range  [5e+03, 1e+05]\n",
+      "  Objective range  [3e+03, 8e+04]\n",
       "  Bounds range     [1e+00, 1e+05]\n",
       "  RHS range        [1e+00, 2e+02]\n",
-      "  QRHS range       [4e+01, 4e+01]\n",
-      "Presolve removed 67 rows and 96 columns\n",
-      "Presolve time: 0.03s\n",
-      "Presolved: 5343 rows, 6695 columns, 18650 nonzeros\n",
-      "Presolved model has 3480 SOS constraint(s)\n",
-      "Variable types: 0 continuous, 6695 integer (2490 binary)\n",
-      "Found heuristic solution: objective 122100.00000\n",
+      "  QRHS range       [2e+02, 2e+02]\n",
+      "Presolve removed 8860 rows and 702 columns\n",
+      "Presolve time: 0.15s\n",
+      "Presolved: 27860 rows, 44021 columns, 106220 nonzeros\n",
+      "Presolved model has 23600 SOS constraint(s)\n",
+      "Variable types: 0 continuous, 44021 integer (16200 binary)\n",
+      "Found heuristic solution: objective 148600.00000\n",
       "\n",
-      "Explored 1 nodes (0 simplex iterations) in 0.46 seconds (0.22 work units)\n",
+      "Explored 1 nodes (0 simplex iterations) in 7.66 seconds (3.08 work units)\n",
       "Thread count was 8 (of 8 available processors)\n",
       "\n",
-      "Solution count 1: 122100 \n",
+      "Solution count 1: 148600 \n",
       "\n",
       "Optimal solution found (tolerance 1.00e-04)\n",
-      "Best objective 1.221000000000e+05, best bound 1.221000000000e+05, gap 0.0000%\n",
-      "z* =  122100.0\n"
+      "Best objective 1.486000000000e+05, best bound 1.486000000000e+05, gap 0.0000%\n",
+      "z* =  148600.0\n"
      ]
     }
    ],
