為什麼還是限制不住...

--- a/OR_MP_P1.ipynb
+++ b/OR_MP_P1.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 202,
+   "execution_count": 273,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 203,
+   "execution_count": 274,
    "metadata": {},
    "outputs": [
     {
@@ -172,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 204,
+   "execution_count": 275,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -251,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 205,
+   "execution_count": 276,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -262,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 206,
+   "execution_count": 277,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -294,6 +294,7 @@
     "\n",
     "# 一個訂單最多分配給一台車\n",
     "P1.addConstrs(quicksum(y[m][k] for m in range(n_C)) <= 1 for k in range(1, n_K+1))\n",
+    "P1.addConstrs((quicksum(y[m][k] for m in range(n_C)) <= quicksum(accept[k] for k in range(1, n_K+1)) for k in range(1, n_K+1))) \n",
     "# 接單的話，至少要提供跟客戶要求的level一樣的車\n",
     "P1.addConstrs(y[m][k]*lvD[k] <= lvS[m] for k in range(1, n_K+1) for m in range(n_C))\n",
     "# 接單的話，客戶領車的地方要有車\n",
@@ -304,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 207,
+   "execution_count": 278,
    "metadata": {},
    "outputs": [
     {
@@ -316,8 +317,8 @@
       "CPU model: Intel(R) Core(TM) i5-1035G1 CPU @ 1.00GHz, instruction set [SSE2|AVX|AVX2|AVX512]\n",
       "Thread count: 4 physical cores, 8 logical processors, using up to 8 threads\n",
       "\n",
-      "Optimize a model with 9110 rows, 9323 columns and 42241 nonzeros\n",
-      "Model fingerprint: 0xfaf7b353\n",
+      "Optimize a model with 9130 rows, 9323 columns and 42841 nonzeros\n",
+      "Model fingerprint: 0xbed011f9\n",
       "Model has 4030 quadratic constraints\n",
       "Variable types: 0 continuous, 9323 integer (4682 binary)\n",
       "Coefficient statistics:\n",
@@ -328,14 +329,14 @@
       "  Bounds range     [1e+00, 1e+05]\n",
       "  RHS range        [1e+00, 2e+02]\n",
       "  QRHS range       [2e+02, 2e+02]\n",
-      "Presolve removed 8860 rows and 702 columns\n",
+      "Presolve removed 8880 rows and 702 columns\n",
       "Presolve time: 0.15s\n",
       "Presolved: 27860 rows, 44021 columns, 106220 nonzeros\n",
       "Presolved model has 23600 SOS constraint(s)\n",
       "Variable types: 0 continuous, 44021 integer (16200 binary)\n",
       "Found heuristic solution: objective 148600.00000\n",
       "\n",
-      "Explored 1 nodes (0 simplex iterations) in 7.66 seconds (3.08 work units)\n",
+      "Explored 1 nodes (0 simplex iterations) in 7.35 seconds (3.08 work units)\n",
       "Thread count was 8 (of 8 available processors)\n",
       "\n",
       "Solution count 1: 148600 \n",
