人被逼急了什麼都做得出來，除了OR :)

--- a/OR_MP_P1.ipynb
+++ b/OR_MP_P1.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 273,
+   "execution_count": 309,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 274,
+   "execution_count": 310,
    "metadata": {},
    "outputs": [
     {
@@ -159,7 +159,18 @@
     "    hour_rate = int(df_order.loc[k-1, 'Hour rate'])\n",
     "    Revenue.append(time_units*(hour_rate//2))\n",
     "print(\"Revenue= \", Revenue)\n",
-    "print(\"Sum of revenue= \", sum(Revenue))"
+    "print(\"Sum of revenue= \", sum(Revenue))\n",
+    "\n",
+    "# x_mk = time spent when accept order k assigned to car m (rental time)\n",
+    "x = []\n",
+    "for m in range(n_C):\n",
+    "    x.append([])\n",
+    "    for k in range(n_K+1):\n",
+    "        if (k==0):\n",
+    "            x[m].append(int(0))\n",
+    "            continue\n",
+    "        time_units = int(df_order.loc[k-1, 'Time units'])\n",
+    "        x[m].append(time_units)"
    ]
   },
   {
@@ -172,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 275,
+   "execution_count": 311,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -228,16 +239,16 @@
     "for k in range(n_K+1):\n",
     "    v.append(P1.addVar(lb = 0, vtype = GRB.BINARY, name = \"v_\" + str(k+1)))\n",
     "\n",
-    "# x_mk = time spent when accept order k assigned to car m (rental time)\n",
-    "x = []\n",
-    "for m in range(n_C):\n",
-    "    x.append([])\n",
-    "    for k in range(n_K+1):\n",
-    "        if (k==0):\n",
-    "            x[m].append(int(0))\n",
-    "            continue\n",
-    "        time_units = int(df_order.loc[k-1, 'Time units'])\n",
-    "        x[m].append(P1.addVar(lb = time_units, vtype = GRB.INTEGER, name = \"x_\" + str(m+1) + str(k)))\n",
+    "# # x_mk = time spent when accept order k assigned to car m (rental time)\n",
+    "# x = []\n",
+    "# for m in range(n_C):\n",
+    "#     x.append([])\n",
+    "#     for k in range(n_K+1):\n",
+    "#         if (k==0):\n",
+    "#             x[m].append(int(0))\n",
+    "#             continue\n",
+    "#         time_units = int(df_order.loc[k-1, 'Time units'])\n",
+    "#         x[m].append(P1.addVar(lb = time_units, vtype = GRB.INTEGER, name = \"x_\" + str(m+1) + str(k)))\n",
     "\n",
     "# y_mk = 1 if order k assigned to car m\n",
     "y = []\n",
@@ -251,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 276,
+   "execution_count": 312,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -262,11 +273,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 277,
+   "execution_count": 313,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# P1.addConstrs((2*z[m][p][q] <= accept[p] + accept[q] for p in range(n_K+1) for q in range(n_K+1) if (p!=q) for m in range(n_C)))\n",
+    "P1.addConstrs((2*z[m][p][q] <= accept[p] + accept[q] for p in range(n_K+1) for q in range(n_K+1) if (p!=q) for m in range(n_C)))\n",
     "# Each order has a single predecessor (successor) on exactaly one of the car\n",
     "P1.addConstrs((quicksum(quicksum(z[m][p][q] for m in range(n_C)) for p in range(n_K+1) if (p!=q))) == 1 for q in range(n_K))\n",
     "P1.addConstrs((quicksum(quicksum(z[m][p][q] for m in range(n_C)) for q in range(n_K+1) if (p!=q))) == 1 for p in range(n_K))\n",
@@ -281,7 +292,7 @@
     "# C0=0, an auxiliary order used to enforce the start of the schedule\n",
     "P1.addConstrs(C[0] == 0 for m in range(n_C))\n",
     "# Calculate the makespan for each individual car\n",
-    "P1.addConstrs(quicksum(quicksum(((s[m][p][q] + x[m][q]) * z[m][p][q]) for q in range(n_K)) for p in range(n_K+1) if (p!=q))  == O[m] for m in range(n_C))\n",
+    "P1.addConstrs(quicksum(quicksum(((s[m][p][q] + x[m][q]) * z[m][p][q]) for q in range(n_K)) for p in range(n_K+1) if (p!=q)) == O[m] for m in range(n_C))\n",
     "# Links the individual car makespan to the overall schedule makespan\n",
     "P1.addConstrs((O[m] <= Cmax for m in range(n_C)))\n",
     "\n",
@@ -305,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 278,
+   "execution_count": 314,
    "metadata": {},
    "outputs": [
     {
@@ -317,26 +328,26 @@
       "CPU model: Intel(R) Core(TM) i5-1035G1 CPU @ 1.00GHz, instruction set [SSE2|AVX|AVX2|AVX512]\n",
       "Thread count: 4 physical cores, 8 logical processors, using up to 8 threads\n",
       "\n",
-      "Optimize a model with 9130 rows, 9323 columns and 42841 nonzeros\n",
-      "Model fingerprint: 0xbed011f9\n",
+      "Optimize a model with 13330 rows, 9123 columns and 55041 nonzeros\n",
+      "Model fingerprint: 0xf5c3d19d\n",
       "Model has 4030 quadratic constraints\n",
-      "Variable types: 0 continuous, 9323 integer (4682 binary)\n",
+      "Variable types: 0 continuous, 9123 integer (4682 binary)\n",
       "Coefficient statistics:\n",
       "  Matrix range     [1e+00, 9e+00]\n",
       "  QMatrix range    [1e+00, 3e+01]\n",
-      "  QLMatrix range   [1e+00, 1e+00]\n",
+      "  QLMatrix range   [1e+00, 2e+02]\n",
       "  Objective range  [3e+03, 8e+04]\n",
       "  Bounds range     [1e+00, 1e+05]\n",
       "  RHS range        [1e+00, 2e+02]\n",
-      "  QRHS range       [2e+02, 2e+02]\n",
-      "Presolve removed 8880 rows and 702 columns\n",
-      "Presolve time: 0.15s\n",
-      "Presolved: 27860 rows, 44021 columns, 106220 nonzeros\n",
-      "Presolved model has 23600 SOS constraint(s)\n",
-      "Variable types: 0 continuous, 44021 integer (16200 binary)\n",
+      "  QRHS range       [2e+01, 2e+02]\n",
+      "Presolve removed 13080 rows and 692 columns\n",
+      "Presolve time: 0.14s\n",
+      "Presolved: 20260 rows, 32431 columns, 83420 nonzeros\n",
+      "Presolved model has 16000 SOS constraint(s)\n",
+      "Variable types: 0 continuous, 32431 integer (12400 binary)\n",
       "Found heuristic solution: objective 148600.00000\n",
       "\n",
-      "Explored 1 nodes (0 simplex iterations) in 7.35 seconds (3.08 work units)\n",
+      "Explored 1 nodes (0 simplex iterations) in 5.29 seconds (2.07 work units)\n",
       "Thread count was 8 (of 8 available processors)\n",
       "\n",
       "Solution count 1: 148600 \n",
