--- a/OR_MP_P1.ipynb
+++ b/OR_MP_P1.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 309,
+   "execution_count": 112,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 310,
+   "execution_count": 113,
    "metadata": {},
    "outputs": [
     {
@@ -53,6 +53,7 @@
       " [18 16 28  8 11  7  1  5 28  0]]\n",
       "pickup station:  [0, 7, 10, 10, 1, 7, 8, 6, 9, 8, 8, 2, 2, 1, 5, 4, 4, 9, 6, 8, 3]\n",
       "return station:  [0, 3, 4, 2, 3, 10, 4, 9, 10, 1, 5, 8, 10, 8, 9, 5, 2, 10, 9, 4, 10]\n",
+      "order_distance:  [[0, 1, 0, 0, 18, 1, 5, 7, 28, 5, 5, 16, 16, 18, 11, 8, 8, 28, 7, 5], [28, 27, 28, 28, 12, 27, 33, 21, 4, 33, 33, 16, 16, 12, 17, 22, 22, 4, 21, 33], [8, 7, 8, 8, 12, 7, 11, 13, 22, 11, 11, 18, 18, 12, 7, 0, 0, 22, 13, 11], [16, 15, 16, 16, 28, 15, 21, 9, 20, 21, 21, 0, 0, 28, 11, 18, 18, 20, 9, 21], [28, 27, 28, 28, 12, 27, 33, 21, 4, 33, 33, 16, 16, 12, 17, 22, 22, 4, 21, 33], [0, 1, 0, 0, 18, 1, 5, 7, 28, 5, 5, 16, 16, 18, 11, 8, 8, 28, 7, 5], [8, 7, 8, 8, 12, 7, 11, 13, 22, 11, 11, 18, 18, 12, 7, 0, 0, 22, 13, 11], [28, 27, 28, 28, 10, 27, 33, 21, 0, 33, 33, 20, 20, 10, 17, 22, 22, 0, 21, 33], [0, 1, 0, 0, 18, 1, 5, 7, 28, 5, 5, 16, 16, 18, 11, 8, 8, 28, 7, 5], [18, 17, 18, 18, 0, 17, 23, 23, 10, 23, 23, 28, 28, 0, 17, 12, 12, 10, 23, 23], [11, 10, 11, 11, 17, 10, 16, 6, 17, 16, 16, 11, 11, 17, 0, 7, 7, 17, 6, 16], [5, 6, 5, 5, 23, 6, 0, 12, 33, 0, 0, 21, 21, 23, 16, 11, 11, 33, 12, 0], [0, 1, 0, 0, 18, 1, 5, 7, 28, 5, 5, 16, 16, 18, 11, 8, 8, 28, 7, 5], [5, 6, 5, 5, 23, 6, 0, 12, 33, 0, 0, 21, 21, 23, 16, 11, 11, 33, 12, 0], [28, 27, 28, 28, 10, 27, 33, 21, 0, 33, 33, 20, 20, 10, 17, 22, 22, 0, 21, 33], [11, 10, 11, 11, 17, 10, 16, 6, 17, 16, 16, 11, 11, 17, 0, 7, 7, 17, 6, 16], [16, 15, 16, 16, 28, 15, 21, 9, 20, 21, 21, 0, 0, 28, 11, 18, 18, 20, 9, 21], [0, 1, 0, 0, 18, 1, 5, 7, 28, 5, 5, 16, 16, 18, 11, 8, 8, 28, 7, 5], [28, 27, 28, 28, 10, 27, 33, 21, 0, 33, 33, 20, 20, 10, 17, 22, 22, 0, 21, 33], [8, 7, 8, 8, 12, 7, 11, 13, 22, 11, 11, 18, 18, 12, 7, 0, 0, 22, 13, 11]]\n",
       "level_demanded:  [0, 1, 1, 1, 1, 1, 1, 2, 2, 2, 2, 2, 2, 2, 3, 3, 3, 3, 3, 3, 3]\n",
       "level_supplied:  [1, 1, 1, 2, 2, 2, 3, 3, 3, 3]\n",
       "Revenue=  [0, 2900, 1000, 2500, 2400, 10100, 2900, 7500, 3800, 7000, 7000, 2600, 3000, 5400, 12000, 26000, 16500, 12000, 9000, 7000, 8000]\n",
@@ -132,6 +133,15 @@
     "print(\"pickup station: \", pickup)\n",
     "print(\"return station: \", finish)\n",
     "\n",
+    "# distance between order p and q\n",
+    "order_distance = []\n",
+    "for p in range(n_K):\n",
+    "    order_distance.append([])\n",
+    "    for q in range(n_K):\n",
+    "        order_distance[p].append([])\n",
+    "        order_distance[p][q] = distance_array[finish[p]-1][pickup[q]-1]\n",
+    "print(\"order_distance: \", order_distance)\n",
+    "\n",
     "lvD = []\n",
     "for k in range(n_K+1):\n",
     "    if (k==0):\n",
@@ -183,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 311,
+   "execution_count": 114,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -239,17 +249,6 @@
     "for k in range(n_K+1):\n",
     "    v.append(P1.addVar(lb = 0, vtype = GRB.BINARY, name = \"v_\" + str(k+1)))\n",
     "\n",
-    "# # x_mk = time spent when accept order k assigned to car m (rental time)\n",
-    "# x = []\n",
-    "# for m in range(n_C):\n",
-    "#     x.append([])\n",
-    "#     for k in range(n_K+1):\n",
-    "#         if (k==0):\n",
-    "#             x[m].append(int(0))\n",
-    "#             continue\n",
-    "#         time_units = int(df_order.loc[k-1, 'Time units'])\n",
-    "#         x[m].append(P1.addVar(lb = time_units, vtype = GRB.INTEGER, name = \"x_\" + str(m+1) + str(k)))\n",
-    "\n",
     "# y_mk = 1 if order k assigned to car m\n",
     "y = []\n",
     "for m in range(n_C):\n",
@@ -262,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 312,
+   "execution_count": 115,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -272,36 +271,44 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Constraints"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 313,
+   "execution_count": 116,
    "metadata": {},
    "outputs": [],
    "source": [
     "P1.addConstrs((2*z[m][p][q] <= accept[p] + accept[q] for p in range(n_K+1) for q in range(n_K+1) if (p!=q) for m in range(n_C)))\n",
     "# Each order has a single predecessor (successor) on exactaly one of the car\n",
-    "P1.addConstrs((quicksum(quicksum(z[m][p][q] for m in range(n_C)) for p in range(n_K+1) if (p!=q))) == 1 for q in range(n_K))\n",
-    "P1.addConstrs((quicksum(quicksum(z[m][p][q] for m in range(n_C)) for q in range(n_K+1) if (p!=q))) == 1 for p in range(n_K))\n",
+    "P1.addConstrs((quicksum(quicksum(z[m][p][q] for m in range(n_C)) for p in range(n_K+1) if (p!=q))) == 1 for q in range(1, n_K+1))\n",
+    "P1.addConstrs((quicksum(quicksum(z[m][p][q] for m in range(n_C)) for q in range(n_K+1) if (p!=q))) == 1 for p in range(1, n_K+1))\n",
     "# # An order can only have a predecessor on a car if it also has a successor on that same car\n",
-    "P1.addConstrs((quicksum(z[m][p][q] for q in range(n_K+1) if (p!=q)) == quicksum(z[m][h][p] for h in range(n_K+1) if (h!=p))) for p in range(n_K) for m in range(n_C))\n",
+    "P1.addConstrs((quicksum(z[m][p][q] for q in range(n_K+1) if (p!=q)) == quicksum(z[m][h][p] for h in range(n_K+1) if (h!=p))) for p in range(1, n_K+1) for m in range(n_C))\n",
     "# The completion times of each order s.t. if order p precedes order q on a car m, \n",
     "# the earliest time that order q can end must be greater than Cp + setup time from order p to order q and the processing time of order q\n",
-    "P1.addConstrs(C[q]-C[p] + A*(1-z[m][p][q]) >= s[m][p][q] + x[m][q] for p in range(n_K+1) for q in range(n_K) if (p!=q) for m in range(n_C))\n",
+    "P1.addConstrs(C[q]-C[p] + A*(1-z[m][p][q]) >= s[m][p][q] + x[m][q] for p in range(n_K+1) for q in range(1, n_K+1) if (p!=q) for m in range(n_C))\n",
     "# Only one order can be schedueled first on each car\n",
-    "P1.addConstrs(quicksum(z[m][0][p] for p in range(n_K)) <= 1 for m in range(n_C))\n",
+    "P1.addConstrs(quicksum(z[m][0][p] for p in range(1, n_K+1)) <= 1 for m in range(n_C))\n",
     "\n",
     "# C0=0, an auxiliary order used to enforce the start of the schedule\n",
     "P1.addConstrs(C[0] == 0 for m in range(n_C))\n",
     "# Calculate the makespan for each individual car\n",
-    "P1.addConstrs(quicksum(quicksum(((s[m][p][q] + x[m][q]) * z[m][p][q]) for q in range(n_K)) for p in range(n_K+1) if (p!=q)) == O[m] for m in range(n_C))\n",
+    "P1.addConstrs(quicksum(quicksum(((s[m][p][q] + x[m][q]) * z[m][p][q]) for q in range(1, n_K+1)) for p in range(n_K+1) if (p!=q)) == O[m] for m in range(n_C))\n",
     "# Links the individual car makespan to the overall schedule makespan\n",
     "P1.addConstrs((O[m] <= Cmax for m in range(n_C)))\n",
     "\n",
     "# 移車/升等二選一\n",
     "P1.addConstrs(u[k]+v[k] <= y[m][k] for k in range(n_K+1) for m in range(n_C)) \n",
     "# 如果有移車，那s[m][p][q]至少是7個單位(清潔*6 + 有移車要提早1單位到達) + 移車所需的時間\n",
-    "P1.addConstrs(s[m][p][q] >= 6+v[q]+distance_array[finish[p]-1][pickup[q]-1] for p in range(1, n_K+1) for q in range(1, n_K+1) if (p!=q) for m in range(n_C)) \n",
+    "P1.addConstrs(s[m][p][q] >= 6+v[q]+order_distance[p-1][q-1] for p in range(1, n_K+1) for q in range(1, n_K+1) if (p!=q) for m in range(n_C)) \n",
     "# 移車的總時間 <= B\n",
-    "P1.addConstrs(quicksum(accept[k] * v[k] * distance_array[finish[p]-1][pickup[k]-1] for k in range(1, n_K+1)) <= B  for p in range(1, n_K+1))\n",
+    "P1.addConstrs(quicksum(accept[k] * v[k] * order_distance[p-1][q-1] for k in range(1, n_K+1)) <= B  for p in range(1, n_K+1))\n",
     "\n",
     "# 一個訂單最多分配給一台車\n",
     "P1.addConstrs(quicksum(y[m][k] for m in range(n_C)) <= 1 for k in range(1, n_K+1))\n",
@@ -311,12 +318,15 @@
     "# 接單的話，客戶領車的地方要有車\n",
     "P1.addConstrs(y[m][k]*pickup[k] == y[m][k]*car_current_station[m] for k in range(1, n_K+1) for m in range(n_C))\n",
     "P1.addConstrs(y[m][p] + y[m][q] <= z[m][p][q] + z[m][q][p] + 1 for m in range(n_C) for p in range(n_K+1) for q in range(n_K+1))\n",
+    "# all the vehicles start from the depot and terminate at the depot.\n",
+    "P1.addConstrs(quicksum(z[m][p][q] for q in range(1, n_K+1)) == quicksum(z[m][q][p] for q in range(1, n_K+1)) for m in range(n_C))\n",
+    "P1.addConstrs(quicksum(z[m][p][q] for q in range(1, n_K+1)) <= 1 for q in range(1, n_K+1) for m in range(n_C)) \n",
     "P1.update()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 314,
+   "execution_count": 117,
    "metadata": {},
    "outputs": [
     {
@@ -328,8 +338,8 @@
       "CPU model: Intel(R) Core(TM) i5-1035G1 CPU @ 1.00GHz, instruction set [SSE2|AVX|AVX2|AVX512]\n",
       "Thread count: 4 physical cores, 8 logical processors, using up to 8 threads\n",
       "\n",
-      "Optimize a model with 13330 rows, 9123 columns and 55041 nonzeros\n",
-      "Model fingerprint: 0xf5c3d19d\n",
+      "Optimize a model with 13540 rows, 9123 columns and 59421 nonzeros\n",
+      "Model fingerprint: 0x42751aa4\n",
       "Model has 4030 quadratic constraints\n",
       "Variable types: 0 continuous, 9123 integer (4682 binary)\n",
       "Coefficient statistics:\n",
@@ -340,14 +350,31 @@
       "  Bounds range     [1e+00, 1e+05]\n",
       "  RHS range        [1e+00, 2e+02]\n",
       "  QRHS range       [2e+01, 2e+02]\n",
-      "Presolve removed 13080 rows and 692 columns\n",
-      "Presolve time: 0.14s\n",
-      "Presolved: 20260 rows, 32431 columns, 83420 nonzeros\n",
+      "Presolve removed 13290 rows and 712 columns\n",
+      "Presolve time: 0.17s\n",
+      "Presolved: 20260 rows, 32411 columns, 83800 nonzeros\n",
       "Presolved model has 16000 SOS constraint(s)\n",
-      "Variable types: 0 continuous, 32431 integer (12400 binary)\n",
-      "Found heuristic solution: objective 148600.00000\n",
+      "Variable types: 0 continuous, 32411 integer (12380 binary)\n",
       "\n",
-      "Explored 1 nodes (0 simplex iterations) in 5.29 seconds (2.07 work units)\n",
+      "Root simplex log...\n",
+      "\n",
+      "Iteration    Objective       Primal Inf.    Dual Inf.      Time\n",
+      "       0    1.4860000e+05   1.245175e+04   0.000000e+00      6s\n",
+      "   12536    1.4860000e+05   0.000000e+00   0.000000e+00      7s\n",
+      "\n",
+      "Root relaxation: objective 1.486000e+05, 12536 iterations, 0.69 seconds (0.55 work units)\n",
+      "Total elapsed time = 6.52s\n",
+      "\n",
+      "    Nodes    |    Current Node    |     Objective Bounds      |     Work\n",
+      " Expl Unexpl |  Obj  Depth IntInf | Incumbent    BestBd   Gap | It/Node Time\n",
+      "\n",
+      "     0     0 148600.000    0   32          - 148600.000      -     -    6s\n",
+      "     0     0 148600.000    0   32          - 148600.000      -     -    8s\n",
+      "     0     2 148600.000    0   32          - 148600.000      -     -    8s\n",
+      "    60    92 148600.000   17  106          - 148600.000      -   120   10s\n",
+      "H  115   145                    148600.00000 148600.000  0.00%  97.9   11s\n",
+      "\n",
+      "Explored 153 nodes (27451 simplex iterations) in 11.94 seconds (4.76 work units)\n",
       "Thread count was 8 (of 8 available processors)\n",
       "\n",
       "Solution count 1: 148600 \n",
