--- a/OR_MP_P1.ipynb
+++ b/OR_MP_P1.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 142,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,36 +33,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 143,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "car_current_station:  [1, 4, 2, 9, 7, 3, 7, 6, 10, 7]\n",
-      "[[ 0 28 12 12 17 23 17 23 10 18]\n",
-      " [28  0 16 18 11  9 15 21 20 16]\n",
-      " [12 16  0 22 17 21 27 33  4 28]\n",
-      " [12 18 22  0  7 13  7 11 22  8]\n",
-      " [17 11 17  7  0  6 10 16 17 11]\n",
-      " [23  9 21 13  6  0  6 12 21  7]\n",
-      " [17 15 27  7 10  6  0  6 27  1]\n",
-      " [23 21 33 11 16 12  6  0 33  5]\n",
-      " [10 20  4 22 17 21 27 33  0 28]\n",
-      " [18 16 28  8 11  7  1  5 28  0]]\n",
-      "pickup station:  [0, 7, 10, 10, 1, 7, 8, 6, 9, 8, 8, 2, 2, 1, 5, 4, 4, 9, 6, 8, 3]\n",
-      "return station:  [0, 3, 4, 2, 3, 10, 4, 9, 10, 1, 5, 8, 10, 8, 9, 5, 2, 10, 9, 4, 10]\n",
-      "order_distance:  [[0, 1, 0, 0, 18, 1, 5, 7, 28, 5, 5, 16, 16, 18, 11, 8, 8, 28, 7, 5], [28, 27, 28, 28, 12, 27, 33, 21, 4, 33, 33, 16, 16, 12, 17, 22, 22, 4, 21, 33], [8, 7, 8, 8, 12, 7, 11, 13, 22, 11, 11, 18, 18, 12, 7, 0, 0, 22, 13, 11], [16, 15, 16, 16, 28, 15, 21, 9, 20, 21, 21, 0, 0, 28, 11, 18, 18, 20, 9, 21], [28, 27, 28, 28, 12, 27, 33, 21, 4, 33, 33, 16, 16, 12, 17, 22, 22, 4, 21, 33], [0, 1, 0, 0, 18, 1, 5, 7, 28, 5, 5, 16, 16, 18, 11, 8, 8, 28, 7, 5], [8, 7, 8, 8, 12, 7, 11, 13, 22, 11, 11, 18, 18, 12, 7, 0, 0, 22, 13, 11], [28, 27, 28, 28, 10, 27, 33, 21, 0, 33, 33, 20, 20, 10, 17, 22, 22, 0, 21, 33], [0, 1, 0, 0, 18, 1, 5, 7, 28, 5, 5, 16, 16, 18, 11, 8, 8, 28, 7, 5], [18, 17, 18, 18, 0, 17, 23, 23, 10, 23, 23, 28, 28, 0, 17, 12, 12, 10, 23, 23], [11, 10, 11, 11, 17, 10, 16, 6, 17, 16, 16, 11, 11, 17, 0, 7, 7, 17, 6, 16], [5, 6, 5, 5, 23, 6, 0, 12, 33, 0, 0, 21, 21, 23, 16, 11, 11, 33, 12, 0], [0, 1, 0, 0, 18, 1, 5, 7, 28, 5, 5, 16, 16, 18, 11, 8, 8, 28, 7, 5], [5, 6, 5, 5, 23, 6, 0, 12, 33, 0, 0, 21, 21, 23, 16, 11, 11, 33, 12, 0], [28, 27, 28, 28, 10, 27, 33, 21, 0, 33, 33, 20, 20, 10, 17, 22, 22, 0, 21, 33], [11, 10, 11, 11, 17, 10, 16, 6, 17, 16, 16, 11, 11, 17, 0, 7, 7, 17, 6, 16], [16, 15, 16, 16, 28, 15, 21, 9, 20, 21, 21, 0, 0, 28, 11, 18, 18, 20, 9, 21], [0, 1, 0, 0, 18, 1, 5, 7, 28, 5, 5, 16, 16, 18, 11, 8, 8, 28, 7, 5], [28, 27, 28, 28, 10, 27, 33, 21, 0, 33, 33, 20, 20, 10, 17, 22, 22, 0, 21, 33], [8, 7, 8, 8, 12, 7, 11, 13, 22, 11, 11, 18, 18, 12, 7, 0, 0, 22, 13, 11]]\n",
-      "level_demanded:  [0, 1, 1, 1, 1, 1, 1, 2, 2, 2, 2, 2, 2, 2, 3, 3, 3, 3, 3, 3, 3]\n",
-      "level_supplied:  [1, 1, 1, 2, 2, 2, 3, 3, 3, 3]\n",
-      "Revenue=  [0, 2900, 1000, 2500, 2400, 10100, 2900, 7500, 3800, 7000, 7000, 2600, 3000, 5400, 12000, 26000, 16500, 12000, 9000, 7000, 8000]\n",
-      "Sum of revenue=  148600\n"
+      "car_current_station:  [1, 2, 1, 3, 2]\n",
+      "order_end_time:  [0, 34, 187, 271, 382, 183, 246, 416, 372, 333, 452]\n",
+      "order_begin_time:  [0, 12, 1, 89, 218, 67, 102, 252, 272, 177, 338]\n",
+      "[[ 0  6  7]\n",
+      " [ 6  0 11]\n",
+      " [ 7 11  0]]\n",
+      "pickup station:  [0, 2, 3, 1, 3, 2, 2, 2, 3, 1, 1]\n",
+      "return station:  [0, 2, 3, 1, 2, 1, 3, 1, 1, 3, 3]\n",
+      "order_distance:  [[0, 11, 0, 7, 0, 11, 11, 11, 0, 7], [11, 0, 11, 6, 11, 0, 0, 0, 11, 6], [0, 11, 0, 7, 0, 11, 11, 11, 0, 7], [7, 6, 7, 0, 7, 6, 6, 6, 7, 0], [11, 0, 11, 6, 11, 0, 0, 0, 11, 6], [7, 6, 7, 0, 7, 6, 6, 6, 7, 0], [0, 11, 0, 7, 0, 11, 11, 11, 0, 7], [7, 6, 7, 0, 7, 6, 6, 6, 7, 0], [7, 6, 7, 0, 7, 6, 6, 6, 7, 0], [0, 11, 0, 7, 0, 11, 11, 11, 0, 7]]\n",
+      "level_demanded:  [0, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1]\n",
+      "level_supplied:  [1, 1, 1, 1, 1]\n",
+      "Revenue=  [0, 1100, 9300, 9100, 8200, 5800, 7200, 8200, 5000, 7800, 5700]\n",
+      "Sum of revenue=  67400\n"
      ]
     }
    ],
    "source": [
-    "df = pd.read_csv('data\\instance04.txt', header=None)\n",
+    "df = pd.read_csv('data\\instance03.txt', header=None)\n",
     "\n",
     "df_main = df.iloc[:2,:]\n",
     "df_main.columns = df_main.iloc[0]\n",
@@ -104,6 +99,24 @@
     "df_order['Return time (ordinal)'] = df_order.apply(lambda row: pd.to_datetime(row['Return time']) - first_period_start, axis=1).apply(lambda x: math.ceil(x.total_seconds() / 1800))\n",
     "df_order = pd.merge(df_order, df_car_lv, left_on='Level', right_on='Car level', how='left')\n",
     "df_order = df_order.drop(['Car level'], axis=1)\n",
+    "\n",
+    "order_end_time = []\n",
+    "for k in range(n_K+1):\n",
+    "    if (k==0):\n",
+    "        order_end_time.append(int(0))\n",
+    "        continue\n",
+    "    finish_time = int(df_order.loc[k-1, 'Return time (ordinal)'])\n",
+    "    order_end_time.append(finish_time)\n",
+    "print(\"order_end_time: \", order_end_time)  \n",
+    "\n",
+    "order_begin_time = []\n",
+    "for k in range(n_K+1):\n",
+    "    if (k==0):\n",
+    "        order_begin_time.append(int(0))\n",
+    "        continue\n",
+    "    pickup_time = int(df_order.loc[k-1, 'Pick-up time (ordinal)'])\n",
+    "    order_begin_time.append(pickup_time)\n",
+    "print(\"order_begin_time: \", order_begin_time)  \n",
     "\n",
     "# pickup station of order k\n",
     "pickup = []\n",
@@ -193,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 144,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -261,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 145,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -280,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 146,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -295,18 +308,27 @@
     "P1.addConstrs(C[q]-C[p] + A*(1-z[m][p][q]) >= s[m][p][q] + x[m][q] for p in range(n_K+1) for q in range(1, n_K+1) if (p!=q) for m in range(n_C))\n",
     "# Only one order can be schedueled first on each car\n",
     "P1.addConstrs(quicksum(z[m][0][p] for p in range(1, n_K+1)) <= 1 for m in range(n_C))\n",
-    "\n",
     "# C0=0, an auxiliary order used to enforce the start of the schedule\n",
     "P1.addConstrs(C[0] == 0 for m in range(n_C))\n",
     "# Calculate the makespan for each individual car\n",
     "P1.addConstrs(quicksum(quicksum(((s[m][p][q] + x[m][q]) * z[m][p][q]) for q in range(1, n_K+1)) for p in range(n_K+1) if (p!=q)) == O[m] for m in range(n_C))\n",
     "# Links the individual car makespan to the overall schedule makespan\n",
     "P1.addConstrs((O[m] <= Cmax for m in range(n_C)))\n",
+    "# 什麼時候升等\n",
+    "P1.addConstrs(z[m][p][q] * lvS[m] <= u[p] + lvD[p] for p in range(1, n_K+1) for q in range(1, n_K+1) if (p!=q) for m in range(n_C))\n",
+    "P1.addConstrs(z[m][p][q] * lvS[m] <= u[q] + lvD[q] for q in range(1, n_K+1) for p in range(1, n_K+1) if (p!=q) for m in range(n_C))\n",
+    "# \n",
+    "# ------------------------------------- #\n",
+    "\n",
+    "# car m 第一單花的時間\n",
+    "# P1.addConstrs(s[m][0][p] == order_distance[p-1][q-1] for p in range(1, n_K+1) for m in range(n_C))\n",
+    "P1.addConstrs(s[m][p][q] == 7+order_distance[p-1][q-1] for p in range(1, n_K+1) for q in range(1, n_K+1) for m in range(n_C))\n",
+    "# P1.addConstrs(z[m][p][q] * (order_end_time[p]+s[m][p][q]) <= order_begin_time[q] for p in range(n_K+1) for q in range(1, n_K+1) if (p!=q) for m in range(n_C))\n",
     "\n",
     "# 移車/升等二選一\n",
     "P1.addConstrs(u[k]+v[k] <= y[m][k] for k in range(n_K+1) for m in range(n_C)) \n",
     "# 如果有移車，那s[m][p][q]至少是7個單位(清潔*6 + 有移車要提早1單位到達) + 移車所需的時間\n",
-    "P1.addConstrs(s[m][p][q] >= 6+v[q]+order_distance[p-1][q-1] for p in range(1, n_K+1) for q in range(1, n_K+1) if (p!=q) for m in range(n_C)) \n",
+    "# P1.addConstrs(s[m][p][q] >= 6+v[q]+order_distance[p-1][q-1] for p in range(1, n_K+1) for q in range(1, n_K+1) if (p!=q) for m in range(n_C)) \n",
     "# 移車的總時間 <= B\n",
     "P1.addConstrs(quicksum(accept[k] * v[k] * order_distance[p-1][q-1] for k in range(1, n_K+1)) <= B  for p in range(1, n_K+1))\n",
     "\n",
@@ -326,7 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 147,
    "metadata": {},
    "outputs": [
     {
@@ -338,50 +360,40 @@
       "CPU model: Intel(R) Core(TM) i5-1035G1 CPU @ 1.00GHz, instruction set [SSE2|AVX|AVX2|AVX512]\n",
       "Thread count: 4 physical cores, 8 logical processors, using up to 8 threads\n",
       "\n",
-      "Optimize a model with 13540 rows, 9123 columns and 59421 nonzeros\n",
-      "Model fingerprint: 0x42751aa4\n",
-      "Model has 4030 quadratic constraints\n",
-      "Variable types: 0 continuous, 9123 integer (4682 binary)\n",
+      "Optimize a model with 2870 rows, 1313 columns and 9253 nonzeros\n",
+      "Model fingerprint: 0xacfa9b30\n",
+      "Model has 515 quadratic constraints\n",
+      "Variable types: 0 continuous, 1313 integer (692 binary)\n",
       "Coefficient statistics:\n",
-      "  Matrix range     [1e+00, 9e+00]\n",
-      "  QMatrix range    [1e+00, 3e+01]\n",
+      "  Matrix range     [1e+00, 2e+00]\n",
+      "  QMatrix range    [1e+00, 7e+00]\n",
       "  QLMatrix range   [1e+00, 2e+02]\n",
-      "  Objective range  [3e+03, 8e+04]\n",
+      "  Objective range  [3e+03, 3e+04]\n",
       "  Bounds range     [1e+00, 1e+05]\n",
-      "  RHS range        [1e+00, 2e+02]\n",
+      "  RHS range        [1e+00, 5e+02]\n",
       "  QRHS range       [2e+01, 2e+02]\n",
-      "Presolve removed 13290 rows and 712 columns\n",
-      "Presolve time: 0.17s\n",
-      "Presolved: 20260 rows, 32411 columns, 83800 nonzeros\n",
-      "Presolved model has 16000 SOS constraint(s)\n",
-      "Variable types: 0 continuous, 32411 integer (12380 binary)\n",
+      "Presolve removed 2795 rows and 657 columns\n",
+      "Presolve time: 0.02s\n",
+      "Presolved: 1680 rows, 2306 columns, 7345 nonzeros\n",
+      "Presolved model has 1100 SOS constraint(s)\n",
+      "Variable types: 0 continuous, 2306 integer (1140 binary)\n",
       "\n",
-      "Root simplex log...\n",
-      "\n",
-      "Iteration    Objective       Primal Inf.    Dual Inf.      Time\n",
-      "       0    1.4860000e+05   1.245175e+04   0.000000e+00      6s\n",
-      "   12536    1.4860000e+05   0.000000e+00   0.000000e+00      7s\n",
-      "\n",
-      "Root relaxation: objective 1.486000e+05, 12536 iterations, 0.69 seconds (0.55 work units)\n",
-      "Total elapsed time = 6.52s\n",
+      "Root relaxation: objective 6.740000e+04, 602 iterations, 0.00 seconds (0.00 work units)\n",
       "\n",
       "    Nodes    |    Current Node    |     Objective Bounds      |     Work\n",
       " Expl Unexpl |  Obj  Depth IntInf | Incumbent    BestBd   Gap | It/Node Time\n",
       "\n",
-      "     0     0 148600.000    0   32          - 148600.000      -     -    6s\n",
-      "     0     0 148600.000    0   32          - 148600.000      -     -    8s\n",
-      "     0     2 148600.000    0   32          - 148600.000      -     -    8s\n",
-      "    60    92 148600.000   17  106          - 148600.000      -   120   10s\n",
-      "H  115   145                    148600.00000 148600.000  0.00%  97.9   11s\n",
+      "     0     0 67400.0000    0   10          - 67400.0000      -     -    0s\n",
+      "H    0     0                    67400.000000 67400.0000  0.00%     -    0s\n",
       "\n",
-      "Explored 153 nodes (27451 simplex iterations) in 11.94 seconds (4.76 work units)\n",
+      "Explored 1 nodes (720 simplex iterations) in 0.30 seconds (0.13 work units)\n",
       "Thread count was 8 (of 8 available processors)\n",
       "\n",
-      "Solution count 1: 148600 \n",
+      "Solution count 1: 67400 \n",
       "\n",
       "Optimal solution found (tolerance 1.00e-04)\n",
-      "Best objective 1.486000000000e+05, best bound 1.486000000000e+05, gap 0.0000%\n",
-      "z* =  148600.0\n"
+      "Best objective 6.740000000000e+04, best bound 6.740000000000e+04, gap 0.0000%\n",
+      "z* =  67400.0\n"
      ]
     }
    ],
