--- a/OR_MP_P1.ipynb
+++ b/OR_MP_P1.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,29 +33,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "car_current_station:  [1, 2, 1, 3, 2]\n",
-      "order_end_time:  [0, 34, 187, 271, 382, 183, 246, 416, 372, 333, 452]\n",
-      "order_begin_time:  [0, 12, 1, 89, 218, 67, 102, 252, 272, 177, 338]\n",
-      "[[ 0  6  7]\n",
-      " [ 6  0 11]\n",
-      " [ 7 11  0]]\n",
-      "pickup station:  [0, 2, 3, 1, 3, 2, 2, 2, 3, 1, 1]\n",
-      "return station:  [0, 2, 3, 1, 2, 1, 3, 1, 1, 3, 3]\n",
-      "order_distance:  [[0, 11, 0, 7, 0, 11, 11, 11, 0, 7], [11, 0, 11, 6, 11, 0, 0, 0, 11, 6], [0, 11, 0, 7, 0, 11, 11, 11, 0, 7], [7, 6, 7, 0, 7, 6, 6, 6, 7, 0], [11, 0, 11, 6, 11, 0, 0, 0, 11, 6], [7, 6, 7, 0, 7, 6, 6, 6, 7, 0], [0, 11, 0, 7, 0, 11, 11, 11, 0, 7], [7, 6, 7, 0, 7, 6, 6, 6, 7, 0], [7, 6, 7, 0, 7, 6, 6, 6, 7, 0], [0, 11, 0, 7, 0, 11, 11, 11, 0, 7]]\n",
-      "level_demanded:  [0, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1]\n",
-      "level_supplied:  [1, 1, 1, 1, 1]\n",
-      "Revenue=  [0, 1100, 9300, 9100, 8200, 5800, 7200, 8200, 5000, 7800, 5700]\n",
-      "Sum of revenue=  67400\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "df = pd.read_csv('data\\instance03.txt', header=None)\n",
     "\n",
@@ -206,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -274,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -293,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -321,14 +301,14 @@
     "# ------------------------------------- #\n",
     "\n",
     "# car m 第一單花的時間\n",
-    "# P1.addConstrs(s[m][0][p] == order_distance[p-1][q-1] for p in range(1, n_K+1) for m in range(n_C))\n",
-    "P1.addConstrs(s[m][p][q] == 7+order_distance[p-1][q-1] for p in range(1, n_K+1) for q in range(1, n_K+1) for m in range(n_C))\n",
+    "P1.addConstrs(s[m][0][p] == order_distance[p-1][q-1] for p in range(1, n_K+1) for m in range(n_C))\n",
+    "P1.addConstrs(s[m][p][q] >= 7+order_distance[p-1][q-1] for p in range(1, n_K+1) for q in range(1, n_K+1) for m in range(n_C))\n",
     "# P1.addConstrs(z[m][p][q] * (order_end_time[p]+s[m][p][q]) <= order_begin_time[q] for p in range(n_K+1) for q in range(1, n_K+1) if (p!=q) for m in range(n_C))\n",
     "\n",
     "# 移車/升等二選一\n",
     "P1.addConstrs(u[k]+v[k] <= y[m][k] for k in range(n_K+1) for m in range(n_C)) \n",
     "# 如果有移車，那s[m][p][q]至少是7個單位(清潔*6 + 有移車要提早1單位到達) + 移車所需的時間\n",
-    "# P1.addConstrs(s[m][p][q] >= 6+v[q]+order_distance[p-1][q-1] for p in range(1, n_K+1) for q in range(1, n_K+1) if (p!=q) for m in range(n_C)) \n",
+    "P1.addConstrs(s[m][p][q] >= 6+v[q]+order_distance[p-1][q-1] for p in range(1, n_K+1) for q in range(1, n_K+1) if (p!=q) for m in range(n_C)) \n",
     "# 移車的總時間 <= B\n",
     "P1.addConstrs(quicksum(accept[k] * v[k] * order_distance[p-1][q-1] for k in range(1, n_K+1)) <= B  for p in range(1, n_K+1))\n",
     "\n",
@@ -348,55 +328,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Gurobi Optimizer version 10.0.1 build v10.0.1rc0 (win64)\n",
-      "\n",
-      "CPU model: Intel(R) Core(TM) i5-1035G1 CPU @ 1.00GHz, instruction set [SSE2|AVX|AVX2|AVX512]\n",
-      "Thread count: 4 physical cores, 8 logical processors, using up to 8 threads\n",
-      "\n",
-      "Optimize a model with 2870 rows, 1313 columns and 9253 nonzeros\n",
-      "Model fingerprint: 0xacfa9b30\n",
-      "Model has 515 quadratic constraints\n",
-      "Variable types: 0 continuous, 1313 integer (692 binary)\n",
-      "Coefficient statistics:\n",
-      "  Matrix range     [1e+00, 2e+00]\n",
-      "  QMatrix range    [1e+00, 7e+00]\n",
-      "  QLMatrix range   [1e+00, 2e+02]\n",
-      "  Objective range  [3e+03, 3e+04]\n",
-      "  Bounds range     [1e+00, 1e+05]\n",
-      "  RHS range        [1e+00, 5e+02]\n",
-      "  QRHS range       [2e+01, 2e+02]\n",
-      "Presolve removed 2795 rows and 657 columns\n",
-      "Presolve time: 0.02s\n",
-      "Presolved: 1680 rows, 2306 columns, 7345 nonzeros\n",
-      "Presolved model has 1100 SOS constraint(s)\n",
-      "Variable types: 0 continuous, 2306 integer (1140 binary)\n",
-      "\n",
-      "Root relaxation: objective 6.740000e+04, 602 iterations, 0.00 seconds (0.00 work units)\n",
-      "\n",
-      "    Nodes    |    Current Node    |     Objective Bounds      |     Work\n",
-      " Expl Unexpl |  Obj  Depth IntInf | Incumbent    BestBd   Gap | It/Node Time\n",
-      "\n",
-      "     0     0 67400.0000    0   10          - 67400.0000      -     -    0s\n",
-      "H    0     0                    67400.000000 67400.0000  0.00%     -    0s\n",
-      "\n",
-      "Explored 1 nodes (720 simplex iterations) in 0.30 seconds (0.13 work units)\n",
-      "Thread count was 8 (of 8 available processors)\n",
-      "\n",
-      "Solution count 1: 67400 \n",
-      "\n",
-      "Optimal solution found (tolerance 1.00e-04)\n",
-      "Best objective 6.740000000000e+04, best bound 6.740000000000e+04, gap 0.0000%\n",
-      "z* =  67400.0\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "P1.optimize()\n",
     "print(\"z* = \", P1.ObjVal)"
