--- a/OR_MP_P4.ipynb
+++ b/OR_MP_P4.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,13 +49,14 @@
     "    f.write('==========\\n')\n",
     "\n",
     "# create distances data\n",
+    "# create distances data\n",
     "distances = [[0] * n_S for _ in range(n_S)]\n",
     "for i in range(n_S):\n",
-    "    for j in range(n_S):\n",
-    "        if i != j:\n",
-    "            distances[i][j] = random.randint(1, 100)*30\n",
+    "    for j in range(i + 1, n_S):\n",
+    "        distance = random.randint(1, 100) * 30\n",
+    "        distances[i][j] = distance\n",
+    "        distances[j][i] = distance\n",
     "with open('data\\instance00.txt', 'a') as f:\n",
-    "    f.write('==========\\n')\n",
     "    f.write('From,To,Distance\\n')\n",
     "    for i in range(n_S):\n",
     "        for j in range(n_S):\n",
