--- a/OR_MP_P4.ipynb
+++ b/OR_MP_P4.ipynb
@@ -2,13 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "import random\n",
     "import datetime\n",
     "\n",
+    "def random_datetime(start, end):\n",
+    "    delta = end - start\n",
+    "    int_delta = (delta.days * 24 * 60 * 60) + delta.seconds\n",
+    "    random_second = random.randrange(int_delta)\n",
+    "    return start + datetime.timedelta(seconds=random_second)\n",
+    "    \n",
     "# instance parameters\n",
     "n_S = random.randint(1, 20)\n",
     "n_C = random.randint(1, 50)\n",
@@ -35,11 +41,15 @@
     "    f.write('==========\\n')\n",
     "\n",
     "# create orders data\n",
+    "# compute the end of the planning horizon\n",
+    "planning_horizon_start = datetime.datetime(2023, 1, 1)\n",
+    "planning_horizon_end = planning_horizon_start + datetime.timedelta(days=n_D, hours=24)\n",
+    "\n",
     "order_ids = list(range(1, n_K + 1))\n",
     "order_levels = [random.randint(1, n_L) for _ in range(n_K)]\n",
     "order_pickup_stations = [random.randint(1, n_S) for _ in range(n_K)]\n",
     "order_return_stations = [random.randint(1, n_S) for _ in range(n_K)]\n",
-    "order_pickup_times = [datetime.datetime.now() + datetime.timedelta(days=random.randint(1, 365)) for _ in range(n_K)]\n",
+    "order_pickup_times = [random_datetime(planning_horizon_start, planning_horizon_end) for _ in range(n_K)]\n",
     "order_return_times = [order_pickup_times[i] + datetime.timedelta(hours=random.randint(1, 72)) for i in range(n_K)]\n",
     "with open('data\\instance00.txt', 'a') as f:\n",
     "    f.write('Order ID,Level,Pick-up station,Return station,Pick-up time,Return time\\n')\n",
@@ -48,7 +58,6 @@
     "        f.write(f'{order_pickup_times[i].strftime(\"%Y/%m/%d %H:%M\")},{order_return_times[i].strftime(\"%Y/%m/%d %H:%M\")}\\n')\n",
     "    f.write('==========\\n')\n",
     "\n",
-    "# create distances data\n",
     "# create distances data\n",
     "distances = [[0] * n_S for _ in range(n_S)]\n",
     "for i in range(n_S):\n",
